# cloudcommand

./: .gitignore  README.md  pyproject.toml
src/cloudcmd/: cloudcmd.py
